--- a/bookstore-fe-node/views/index.ejs
+++ b/bookstore-fe-node/views/index.ejs
@@ -64,79 +64,53 @@
 
   <div class="container-fluid mt-4">
     <!-- Control the column width, and how they should appear on different devices -->
-    <div class="row ">
-      <div class="col-sm-4 justify-content-center ">
-        <div class="card mb-4 shadow-sm">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Book one</h4>
-          </div>
-          <div class="card-body">
-            <h1 class="card-title pricing-card-title">Offer $3 </h1>
-            <ul class="list-unstyled mt-3 mb-4">
-              <li>Help center access</li>
-            </ul>
-            <button type="button" class="btn btn-lg btn-block btn-secondary">Book info</button>
-            <button type="button" class="btn btn-lg btn-block btn-primary">Buy it! only 1 left</button>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card mb-4 shadow-sm">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Book two</h4>
-          </div>
-          <div class="card-body">
-            <h1 class="card-title pricing-card-title">Offer $15 </h1>
-            <ul class="list-unstyled mt-3 mb-4">
-              <li>Help center access</li>
-            </ul>
-            <button type="button" class="btn btn-lg btn-block btn-secondary">Book info</button>
-            <button type="button" class="btn btn-lg btn-block btn-primary">Buy it</button>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4 ">
-        <div class="card mb-4 shadow-sm">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Book three</h4>
-          </div>
-          <div class="card-body">
-            <h1 class="card-title pricing-card-title">Offer $29 </h1>
-            <ul class="list-unstyled mt-3 mb-4">
-              <li>Help center access</li>
-            </ul>
-            <button type="button" class="btn btn-lg btn-block btn-secondary">Book info</button>
-            <button type="button" class="btn btn-lg btn-block btn-primary">Buy it</button>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card mb-4 shadow-sm">
-          <div class="card-header">
-            <h4 class="my-0 font-weight-normal">Book four</h4>
-          </div>
-          <div class="card-body">
-            <h1 class="card-title pricing-card-title">Offer $33 </h1>
-            <ul class="list-unstyled mt-3 mb-4">
-              <li>Help center access</li>
-            </ul>
-            <button type="button" class="btn btn-lg btn-block btn-secondary">Book info</button>
-            <button type="button" class="btn btn-lg btn-block btn-primary">Buy it</button>
-          </div>
-        </div>
-      </div>
+    <div id="bookslist" class="row ">
+    
     </div>
   </div>
 
   <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-      <!--spacer-->
+    <!--spacer-->
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script>
     //var urlRemoteRest = "file-browser-service-demo-batch-fuse.apps.nodisk.space";
-    var urlRemoteRest = "file-browser-service-demo-batch-fuse.apps.rhpds3x.openshift.opentlc.com";
+    var urlRemoteRest = "<%= booksapiurl%>";
 
+    function addItemsToList(selector, url, label) {
+      var idItem = 1;
+      $.getJSON(url, function (data) {
+        var items = [];
+        $.each(data, function (index, currentItem) {
+          //alert(key+"="+currentItem);
+          console.log(index + "=" + currentItem.title);
+          var item = $("#" + selector).append(
+            '<div class="col-sm-4">' +
+            ' <div class="card mb-4 shadow-sm">' +
+            '   <div class="card-header">' +
+            '     <h4 class="my-0 font-weight-normal">' + currentItem.title + '</h4>' +
+            '   </div>' +
+            '   <div class="card-body">' +
+            '   <h1 class="card-title pricing-card-title">Offer ' + currentItem.price + '€ </h1>' +
+            '     <ul class="list-unstyled mt-3 mb-4">' +
+            '       <li>A book by ' + currentItem.author + '</li>' +
+            '    </ul>' +
+            '    <button type="button" class="btn btn-lg btn-block btn-secondary">Book info</button>' +
+            '    <button type="button" class="btn btn-lg btn-block btn-primary">Buy it</button>' +
+            ' </div>' +
+            '</div>');
+          idItem++;
+
+        });
+        //     componet.html(label + "(" + (idItem - 1) + ")");
+      });
+    }
+
+    $(document).ready(function () {
+      items = addItemsToList("bookslist", urlRemoteRest + "/books", "book");
+
+    });
   </script>
 
   <footer class="text-muted fixed-bottom">
