--- a/bookstore-fe-node/views/index.ejs
+++ b/bookstore-fe-node/views/index.ejs
@@ -58,14 +58,14 @@
     </div>
   </header>
   <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <h1 class="display-4">Bookslist</h1>
+    <h1 class="display-4">Books sales</h1>
     <p class="lead">Our discounts for today! [API Book @ <%= booksapiurl%>]</p>
   </div>
 
   <div class="container-fluid mt-4">
     <!-- Control the column width, and how they should appear on different devices -->
     <div id="bookslist" class="row ">
-    
+
     </div>
   </div>
 
@@ -76,7 +76,23 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script>
     //var urlRemoteRest = "file-browser-service-demo-batch-fuse.apps.nodisk.space";
-    var urlRemoteRest = "<%= booksapiurl%>";
+    var booksAPIurl = "<%= booksapiurl%>";
+    var bookStockAPIurl = "<%= bookstockapiurl%>";
+
+
+    function getBookStockAvailable(url, bookId) {
+      var ulrToCall = url + "/booksavailability/" + bookId;
+      var selector = "#" + bookId + "-buy-it";
+      console.log(selector);
+
+      $.getJSON(ulrToCall, function (data) {
+        $(selector)[0].firstChild.textContent = "Buy it ( " + data.quantity + " left )";
+      })
+        .fail(function () {
+          console.log("Can't get stock");
+        });
+    }
+
 
     function addItemsToList(selector, url, label) {
       var idItem = 1;
@@ -84,7 +100,10 @@
         var items = [];
         $.each(data, function (index, currentItem) {
           //alert(key+"="+currentItem);
-          console.log(index + "=" + currentItem.title);
+          //console.log(index + "=" + currentItem.title + " " + currentItem.id);
+
+          var stockMessage = "Buy it (stock unknown)"
+
           var item = $("#" + selector).append(
             '<div class="col-sm-4">' +
             ' <div class="card mb-4 shadow-sm">' +
@@ -97,18 +116,23 @@
             '       <li>A book by ' + currentItem.author + '</li>' +
             '    </ul>' +
             '    <button type="button" class="btn btn-lg btn-block btn-secondary">Book info</button>' +
-            '    <button type="button" class="btn btn-lg btn-block btn-primary">Buy it</button>' +
+            '    <button type="button" id="' + currentItem.id + '-buy-it" class="btn btn-lg btn-block btn-primary">' + stockMessage + '</button>' +
             ' </div>' +
             '</div>');
+
+          getBookStockAvailable(bookStockAPIurl, currentItem.id)
+
           idItem++;
 
         });
         //     componet.html(label + "(" + (idItem - 1) + ")");
+      }).fail(function () {
+        console.log("Can't get books");
       });
     }
 
     $(document).ready(function () {
-      items = addItemsToList("bookslist", urlRemoteRest + "/books", "book");
+      items = addItemsToList("bookslist", booksAPIurl + "/books", "book");
 
     });
   </script>
