--- a/bookstore-node-fe/views/index.ejs
+++ b/bookstore-node-fe/views/index.ejs
@@ -59,7 +59,8 @@
   </header>
   <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">Books sales</h1>
-    <p class="lead">Our discounts for today! [API Book @ <%= booksapiurl%>]</p>
+    <p class="lead">Our discounts for today!</p>
+    <!--  [API Book @ <%= booksapiurl%>] -->
   </div>
 
   <div class="container-fluid mt-4">
