--- a/bookstore-node-fe/views/index.ejs
+++ b/bookstore-node-fe/views/index.ejs
@@ -61,6 +61,7 @@
     <h1 class="display-4">Books sales</h1>
     <p class="lead">Our discounts for today!</p>
     <!--  [API Book @ <%= booksapiurl%>] -->
+    <!--  Hidden mod -->
   </div>
 
   <div class="container-fluid mt-4">
